# yolo_cv411

./: CMakeLists.txt  README.md  common.hpp  obj_detect.cpp
src/: main.cpp
